src/test/run-pass/lto-many-codegen-units.rs
// compile-flags: -C lto -C codegen-units=8
// no-prefer-dynamic

fn main() {
}
