src/test/compile-fail/issue-10755.rs
// compile-flags: -C linker=llllll -Z linker-flavor=ld
// error-pattern: linker `llllll` not found

fn main() {
}
